# TRADO

./: .gitignore  AGENTS.md  CLAUDE.md  QT_UI_小白指南.md  README.md  config.py  main.py  main_eel.py  pyproject.toml  tasks.db.backup  test_performance.py
.claude/: settings.local.json
api/: __init__.py  converters.py  exposed_api.py
database/: __init__.py  manager.py  schema.sql
models/: __init__.py  enums.py  permanent_task.py  recurring_task.py  task.py
services/: is_trade_day.py  permanent_task_service.py  recurring_service.py  reminder_service.py  task_service.py
ui/: main_window.py  permanent_task_dialog.py  recurring_dialog.py  reminder_widget.py  reminder_window.py  styles.qss  task_dialog.py  tray_icon.py
ui/web/: app.js  index.html  style.css
