[project]
name = "task-manager"
version = "2.0.0"
description = "基于 Eel 的现代化任务管理器,支持普通任务、循环任务和常驻任务,带 Windows 强制提醒"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "User", email = "user@example.com"}
]
keywords = ["task", "manager", "eel", "reminder", "productivity", "windows"]
license = {text = "MIT"}

dependencies = [
    "eel>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["models", "database", "services", "ui.web"]

[tool.black]
line-length = 100
target-version = ['py310']
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[project.scripts]
task-manager = "main_eel:main"
