[project]
name = "task-manager"
version = "2.0.0"
description = "基于 Eel 的任务管理器，支持普通任务、循环任务和常驻任务，带 Windows 强制提醒"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "lvyiqiang"}
]
keywords = ["task", "manager", "eel", "reminder", "productivity", "windows"]
license = {text = "MIT"}

dependencies = [
    "eel>=0.16.0",
    "keyboard>=0.13.5",
    "requests>=2.34.2",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.20.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "database*", "models*", "services*", "ui*"]
exclude = [".venv*", "build*", "dist*"]

[project.scripts]
task-manager = "main_eel:main"
